# 32blit-examples

./: CMakeLists.txt
3d-demo/: 3d-demo.cpp  CMakeLists.txt  metadata.yml
3d-demo-2/: 3d-demo.cpp  CMakeLists.txt  assets.yml  metadata.yml
3d-demo-2/assets/: link.gltf
3d-demo/3d/: camera.cpp
